:bug: fix text layout issues on gameboy

--- a/src/components/gameboy.css
+++ b/src/components/gameboy.css
@@ -64,6 +64,7 @@
   left: 0px;
   top: 80px;
   font-size: 10px;
+  color: #67879a;
   letter-spacing: -0.5px;
   text-align: center;
 }
@@ -124,6 +125,9 @@
   display: inline;
   font-weight: bold;
   font-style: italic;
+  color: #67879a;
+  font-size: 20px;
+  margin-right: 6px;
 }
 .gameboy .screen-area .label .subtitle {
   display: inline;
@@ -137,6 +141,7 @@
 }
 .gameboy .screen-area .label .subtitle .c {
   color: #aa2058;
+  font-size: 22px;
 }
 .gameboy .screen-area .label .subtitle .o1 {
   color: #605bd9;
@@ -144,6 +149,7 @@
 }
 .gameboy .screen-area .label .subtitle .l {
   color: #78b930;
+  font-size: 22px;
   transform: rotateZ(-10deg);
 }
 .gameboy .screen-area .label .subtitle .o2 {
@@ -152,6 +158,7 @@
 }
 .gameboy .screen-area .label .subtitle .r {
   color: #317aaf;
+  font-size: 22px;
 }
 .gameboy .nintendo {
   padding: 0px 5px;
@@ -165,6 +172,7 @@
   margin-top: 30px;
   text-shadow: 0px -2px 1px #6b67ed;
   box-shadow: 0px -2px 1px #6b67ed;
+  font-size: 16px;
 }
 .gameboy .controls {
   display: flex;
